# thetawave-legacy

./: .gitignore  .markdownlint.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.html  add_item.html  allies.html  append_item_data.html  append_item_sprite.html  architecture.html  bool_effects.html  bosses.html  characters.html  clippy.toml  consumables.html  contributing.html  controls.html  design_item.html  enemies.html  entities-components.html  gameplay.html  index.html  intro.html  item_effects.html  items.html  print.html  searchindex.js  searchindex.json  stat_effects.html
.github/: FUNDING.yml
thetawave_game/: Cargo.toml
thetawave_game/assets/texture/: aseprite_palette.aseprite  blasts_spritesheet.ron  explosions_spritesheet.ron  items_spritesheet.ron  mobs_spritesheet.ron  player_spritesheet.ron  repeater_spritesheet.ron  status_bar_unit_spritesheet.ron
thetawave_game/src/: main.rs
thetawave_game/src/data_include/: mod.rs
thetawave_game/src/states/: main_game.rs  mod.rs  paused.rs
thetawave_lib/: Cargo.toml
thetawave_lib/src/: lib.rs
thetawave_lib/src/audio/: audio.rs  audio_utils.rs  mod.rs  play_audio.rs
thetawave_lib/src/boss/: mod.rs
thetawave_lib/src/components/: abilities.rs  animation.rs  attraction.rs  child_spawner.rs  consumable.rs  item.rs  mod.rs  player.rs  status_bar.rs  store_icon.rs  timelimit.rs
thetawave_lib/src/constants/: mod.rs
thetawave_lib/src/entities/: backgrounds.rs  barriers.rs  blast.rs  boss.rs  mod.rs  side_panels.rs  spaceship.rs  spawn.rs
thetawave_lib/src/events/: events.rs  mod.rs
(+415 files in other folders)
