[package]
name = "space_shooter"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies.amethyst]
version = "0.15.3"
default-features = false
features = ["vulkan", "audio", "gltf"]

[dependencies]
amethyst_test = "0.15.3"
rand = "0.6.5"
serde = "1"

[features]
fail-on-warnings = []

[patch.crates-io]
coreaudio-sys = { git = "https://github.com/RustAudio/coreaudio-sys.git" }
