[package]
name = "thetawave_game"
version = "0.1.0"
authors = ["Carlo Supina <cdsupina@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.15.3"
default-features = false
features = ["vulkan", "audio", "gltf"]

[dependencies]
thetawave_lib = {path = "../thetawave_lib"}
